--- a/wp-content/themes/bootstrap/style.css
+++ b/wp-content/themes/bootstrap/style.css
@@ -41,8 +41,8 @@ Theme Name: Bootstrap
   .nav-scroller .nav {
     display: flex;
     flex-wrap: nowrap;
-    padding-bottom: 1rem;
-    margin-top: -1px;
+    padding-bottom: 2rem;
+    margin-top: -10px;
     overflow-x: auto;
     text-align: center;
     white-space: nowrap;
@@ -53,7 +53,10 @@ Theme Name: Bootstrap
     padding-top: .75rem;
     padding-bottom: .75rem;
     font-size: .875rem;
+    color: blueviolet;
   }
+
+  
   
   .card-img-right {
     height: 100%;
